# MythosForge

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  run_api.py  run_api.sh
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  experiment.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: pages.yml
api/: Dockerfile  Dockerfile.full  README.md  __init__.py  __main__.py  app.py  data.py  deps.py  errors.py  models.py  requirements.txt  settings.py
api/observability/: __init__.py  metrics.py
api/routers/: inference.py  public.py
api/security/: __init__.py  auth.py
api/tests/: test_api.py
docs/: i18n.js  index.html
docs/assets/: style.css
src/: OpenMythos_Guia_Tecnica_2026.docx  mythosforge_demo.py  openmythos_lti_patch.diff  openmythos_quickstart.py
src/mythosforge/: __init__.py  act.py  attention.py  block.py  config.py  lti.py  model.py  moe.py  utils.py
tests/: test_mythosforge.py
