[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "mythosforge-api"
version = "0.4.0"
description = "MythosForge — Recurrent-Depth Transformer Research Lab API"
readme = "api/README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Smouj013"}]

dependencies = [
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.30.0,<1.0",
    "pydantic>=2.0.0,<3.0",
    "pydantic-settings>=2.0.0,<3.0",
    "httpx>=0.27.0,<1.0",
]

[project.optional-dependencies]
inference = [
    "torch>=2.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
]

[tool.pytest.ini_options]
testpaths = ["api/tests", "tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.setuptools.packages.find]
include = ["api*"]
